2001-08-08  Didier Verna  <didier@xemacs.org>

	* autoload.el (update-autoload-files): make defdir a file name,
	not directory name.

2001-08-06  Steve Youngs  <youngs@xemacs.org>

	* menubar-items.el (default-menubar): Use 'report-xemacs-bug'.

	* lisp-mnt.el (lm-report-bug): Use 'report-xemacs-bug-beta-address'.

2001-07-28  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.2 "artichoke" is released.

2001-07-20  Steve Youngs  <youngs@xemacs.org>

	* packages.el (locate-data-file): Revert Karl's patch.

2001-07-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* specifier.el: define-specifier-tag 'gtk.

2001-07-15  Adrian Aichner  <adrian@xemacs.org>

	* about.el (about-personal-info): Fix word duplication typos.
	* dialog.el (make-dialog-box): Ditto.
	* lisp-mode.el (lisp-indent-function): Ditto.
	* package-admin.el (package-admin-delete-binary-package): Ditto.
	* package-get.el (package-get-staging-dir): Ditto.

2001-07-14  Sean MacLennan  <seanm@storm.ca>

	* package-admin.el (package-install-hook): New.
	(package-delete-hook): New.
	(package-admin-add-single-file-package): Use package-delete-hook.

	* package-get.el (package-get): Use package-install-hook.

2001-06-26  Robert Pluim  <rpluim@bigfoot.com>

	* packages.el (locate-library): change to use read-library-name so
	we can get completion

2001-06-26  Robert Pluim  <rpluim@bigfoot.com>

	* package-ui.el (pui-install-selected-packages): reverse the lists
	of packages so that they get handled in the same order as they
	were selected.

2001-06-21  Ben Wing  <ben@xemacs.org>

	* term\AT386.el:
	* term\AT386.el (AT386-keypad-map):
	* term\AT386.el (AT386-keypad-map)): New.
	Fix warnings.

	* term\apollo.el:
	* term\apollo.el ("term/vt100"):
	* term\apollo.el (*dm-mouse-key-bindings-file*): Removed.
	* term\apollo.el (*apollo-key-bindings-hook*): Removed.
	* term\apollo.el (*preempt-display-manager-bindings*): Removed.
	* term\apollo.el (*paste-buffer-directory*): Removed.